# go

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  colab.ipynb  config.json  config.py  dihedral.py  elo.py  engine.py  eval.py  game.py  mcts.py  mcts_wrapper.py  network.py  plot_elo.py  pyproject.toml  rank.sh  readme.md  requirements.txt  ring.py  run.py  search.py  shuffle.py  shuffle.sh  tournament.py  train.py  train.sh
mcts/: Cargo.toml
mcts/src/: lib.rs
mcts_rs/: Cargo.toml
mcts_rs/src/: lib.rs
src/: config.rs  game.rs  main.rs  mcts.rs  nn.rs
