[build-system]
requires = ["maturin>=1.9.2"]
build-backend = "maturin"

[project]
name = "go-zero-mcts-rs"
dynamic = ["version"]
dependencies = [
    "numpy",
    "numba",
    "pandas",
    "sgfmill",
    "requests",
    "safetensors",
    "torch",
    "wandb",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: implementation :: CPython",
    "Programming Language :: Python :: implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mcts_rs"
manifest-path = "mcts_rs/Cargo.toml"
